--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,18 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-  </dependencies>  
+  </dependencies>
+  <build>
+  <plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-surefire-plugin</artifactId>
+      <version>2.19.1</version>
+      <configuration>
+          <testFailureIgnore>true</testFailureIgnore>
+      </configuration>
+    </plugin>
+  <plugins>
   <distributionManagement>
       <repository>
         <id>deployment</id>
@@ -27,4 +38,5 @@
         <url>http://35.243.162.125:8081/repository/testrepo/</url>
     </snapshotRepository>
 </distributionManagement>
+
 </project>
