--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
           <testFailureIgnore>true</testFailureIgnore>
       </configuration>
     </plugin>
-  <plugins>
+  </plugins>
   <distributionManagement>
       <repository>
         <id>deployment</id>
